# UdemyCmakeTutorial

./: .gitignore  .gitmodules  README.md
02_BasicProjStruct/: CMakeLists.txt  mylib.cc
02_ProjStruct/: CMakeLists.txt
03_IntermediateProjStruct/: CMakeLists.txt
03_IntermediateProjStruct/app/: CMakeLists.txt  main.cc
03_IntermediateProjStruct/src/: CMakeLists.txt
03_IntermediateProjStruct/src/mylib/: CMakeLists.txt  mylib.h
04_AlternativeProjStruct/: CMakeLists.txt
04_AlternativeProjStruct/src/mylib/: CMakeLists.txt
04_RecommendedProjStruct/: CMakeLists.txt
04_RecommendedProjStruct/app/: main.cc
05_VariablesNOptions/app/: CMakeLists.txt
05_VariablesNOptions/inc/mylib/: mylib.h
05_VariablesNOptions/src/mylib/: CMakeLists.txt  mylib.cc
06_CMakeAutoGenFile/: CMakeLists.txt
06_CMakeAutoGenFile/app/: CMakeLists.txt
06_CMakeAutoGenFile/inc/mylib/: CMakeLists.txt
06_CMakeAutoGenFile/src/mylib/: CMakeLists.txt
07_PackageManagement/01_GitSubmodule/: CMakeLists.txt
07_PackageManagement/01_GitSubmodule/app/: CMakeLists.txt  main.cc
07_PackageManagement/01_GitSubmodule/config/: config_version.hpp.in
07_PackageManagement/01_GitSubmodule/src/mylib/: CMakeLists.txt
07_PackageManagement/02_FetchContent/: CMakeLists.txt
07_PackageManagement/02_FetchContent/app/: main.cc
07_PackageManagement/02_FetchContent/config/: CMakeLists.txt
07_PackageManagement/02_FetchContent/src/mylib/: CMakeLists.txt
08_CodeDocumentation/01_Doxygen/: CMakeLists.txt  Makefile
08_CodeDocumentation/01_Doxygen/cmake/: Docs.cmake
09_UnitTesting/02_Catch2/: CMakeLists.txt
09_UnitTesting/02_Catch2/cmake/: AddGitSubmodule.cmake
09_UnitTesting/02_Catch2/inc/mylib/: mylib.h
09_UnitTesting/02_Catch2/src/mylib/: mylib.cc
09_UnitTesting/02_Catch2/tests/: CMakeLists.txt  main.cc
